examples/test/testpolicy11963.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11963
  namespace: namespace389
spec:
  podSelector:
    matchLabels:
      key11: value14
      key23: value0
      key26: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value37
          key25: value44
      podSelector:
        matchLabels:
          key8: value44
          key13: value34
          key17: value7
